--- a/src/Locales/ja.json
+++ b/src/Locales/ja.json
@@ -1,5 +1,6 @@
 {
   "nav": {
+    "home": "家",
     "about": "私たちについて",
     "services": "サービス",
     "gallery": "ギャラリー",
@@ -33,5 +34,191 @@
       "cpy": "GSR Education、全著作権所有。",
       "book": "今すぐ予約する"
     }
+  },
+  "about": {
+    "heading": "GSRについて",
+    "subheading": "私たちは、誠実さと配慮をもって、学生をグローバルな教育機会へと導くことに尽力しています。",
+    "button": "お問い合わせ",
+    "intro": {
+      "heading": "私たちは誰ですか？",
+      "p1": "GSR教育アカデミーでは、世界中の学習者を支援する世界クラスの教育を提供しています。当社のプラットフォームは、最先端の教育法、インタラクティブテクノロジー、そして専門家の指導を統合し、すべての学生が成功に不可欠な実践的な能力を習得できるよう支援します。",
+      "p2": "言語、スキル開発、専門トレーニングの厳選されたプログラムを通じて、私たちは知的好奇心、異文化理解、キャリア準備を育みます。私たちは学習を、柔軟で魅力的、そして各生徒に合わせた総合的な旅に変えていきます。",
+      "button": "コースを探索する",
+      "lang": {
+        "eng": "英語",
+        "kor": "韓国人",
+        "jap": "日本語"
+      }
+    },
+    "founder": {
+      "heading": "創設者からのメッセージ",
+      "p1": "8年前にこの学校を始めたとき、私のビジョンはシンプルでした。生徒たちが日本語、韓国語、英語を単なる科目としてではなく、夢を実現するためのツールとして学べる場所を作ることです。長年にわたり、何千人もの生徒たちが希望に満ちた瞳で教室に入り、そして教室を出て行く姿を見てきました。",
+      "span1": "自信",
+      "span2": "スキル、そして",
+      "span3": "機会",
+      "p12": "それが彼らの人生を変えました。",
+      "p2": "言語学習は初日に完璧を目指すのではなく、日々進歩していくことだと私は信じています。成功は一歩一歩着実に近づいていきます。",
+      "p3": "覚える文字一つ一つ、練習する文一つ一つ、挑戦する会話一つ一つ。これらがあなたの成功を育むステップです。私たちは、あなたと共に、一つ一つの節目を導き、励まし、そして共にお祝いすることをお約束します。"
+    },
+    "ceo": {
+      "heading": "CEOからのメッセージ",
+      "p1": "言語は、機会、文化、そして夢への架け橋です。私たちの使命は、生徒たちが自信を持って日本語、韓国語、英語を習得し、世界と繋がり、より明るい未来を築けるよう支援することです。",
+      "p2": "成功とは組み合わせることです",
+      "span1": "一貫性",
+      "and": "そして",
+      "span2": "スピード",
+      "p22": "決して立ち止まらないウサギを想像してみてください。集中力があり、規律正しく、謙虚です。どんなカメも彼には勝てません。",
+      "p3": "それが私たちのビジョンです。着実に一歩ずつ学び、共に前進し、",
+      "span3": "エネルギー",
+      "span4": "スピード",
+      "span5": "決定",
+      "p4": "それぞれのレッスンはあなたの夢に近づく一歩です。"
+    },
+    "benefits": [
+      {
+        "number": "01",
+        "title": "専門の講師と学ぶ",
+        "description": "業界の第一線で活躍する専門家が指導し、最高の学習体験を提供します。",
+        "icon": "👨‍🏫",
+        "img": "/images/IMG-20250822-WA0001.jpg"
+      },
+      {
+        "number": "02",
+        "title": "トップ講師が学習を簡単にする",
+        "description": "プロフェッショナルがステップごとに指導し、複雑なトピックを分かりやすくします。",
+        "icon": "📘",
+        "img": "/images/IMG-20250822-WA0001.jpg"
+      },
+      {
+        "number": "03",
+        "title": "スムーズなビザと申請プロセス",
+        "description": "申請やビザ取得を効率的かつストレスなく進めるために、ステップごとのサポートを行います。",
+        "icon": "✈️",
+        "img": "/images/WhatsApp Image 2025-08-17 at 08.03.57_d383c851.jpg"
+      },
+      {
+        "number": "04",
+        "title": "継続的な学生サポート",
+        "description": "出発前の説明会から海外での生活まで、あらゆる段階でサポートします。",
+        "icon": "🤝",
+        "img": "https://images.unsplash.com/photo-1542744173-8e7e53415bb0?w=900&auto=format&fit=crop&q=60"
+      }
+    ],
+    "vision": {
+      "heading": "教えることで生産性が上がる"
+    },
+    "acheive": "私たちの成果",
+    "congrat": "学生の皆さん、おめでとうございます！",
+    "stat": {
+      "std": "学生",
+      "ins": "エキスパートインストラクター",
+      "rate": "成功率"
+    }
+  },
+  "footer": {
+    "top": {
+      "heading": "来年度の入学受付が始まりました",
+      "start": "始めましょう"
+    },
+    "p1": "GSR教育アカデミーは、ネパールのカトマンズで質の高い教育と指導を提供しています。私たちは、学習における卓越性に尽力しています。",
+    "quick": "クイックリンク",
+    "cpy": "GSR教育アカデミー",
+    "privacy": "プライバシーポリシー",
+    "term": "利用規約",
+    "help": {
+      "need": "助けが必要ですか?",
+      "call": "直接お電話ください?",
+      "supp": "サポートが必要ですか?",
+      "ser": "サービスエリア",
+      "loc": "位置",
+      "fol": "フォローしてください"
+    }
+  },
+  "gallery": {
+    "hero": {
+      "heading": "私たちのギャラリーへようこそ",
+      "subheading": "美しい瞬間を探索しましょう。"
+    },
+    "heading": "ギャラリー",
+    "subheading": "当機関と学生の特集ページをご覧ください。",
+
+    "view": "画像を見る"
+  },
+  "contact": {
+    "hero": {
+      "heading": "ご連絡はこちらs",
+      "subheading": "ご質問やサポートが必要ですか？留学の夢を実現できるよう、あらゆる段階でサポートいたします。"
+    },
+    "heading": "どのようにお手伝いすればいいでしょうか?",
+    "subheading": "教育チームにお問い合わせください",
+    "hello": "こんにちは！",
+    "hellsub": "ご質問などございましたら、いつでもお気軽にお問い合わせください。ご連絡をお待ちしております。ご不明な点がございましたら、お気軽にお問い合わせいただくか、オフィスでコーヒーを飲みながらお気軽にお立ち寄りください。",
+    "form": {
+      "name": "あなたのフルネーム",
+      "mail": "あなたのメールアドレス",
+      "number": "あなたの電話番号",
+      "sub": "あなたの件名",
+      "msg": "あなたのメッセージ",
+      "info": "当社はお客様のプライバシー保護に尽力しております。お客様の明示的な同意なしに、お客様に関する情報を収集することは一切ございません。",
+      "button": "メッセージを送信する",
+      "placeholder": {
+        "sub": "どのようにお手伝いしましょうか？",
+        "msg": "お問い合わせ内容や教育に関する質問について記述してください。"
+      },
+      "loc": {
+        "title": "GSR教育アカデミー",
+        "add": "住所",
+        "mail": "電子メール",
+        "button": "Googleマップで見る",
+        "mob": "携帯"
+      }
+    }
+  },
+  "doc": {
+    "hero": {
+      "heading": "書類とビザのガイダンス",
+      "subheading": "日本語、韓国語、英語のプログラムにご応募いただく学生の皆様を、書類準備から出発前オリエンテーションまで、あらゆる段階でサポートいたします。専門コンサルタントや認可を受けた人材派遣会社と連携し、スムーズな手続きをお手伝いいたします。"
+    },
+    "steps": [
+      {
+        "id": 1,
+        "title": "書類の準備",
+        "description": "最初のステップは、パスポート、市民権証明書、出生証明書、警察の身分証明書など、必要な書類をすべて集めることです。成績証明書、人物証明書、技能証明書は、確認と整理が必要です。適切な書類の準備は、ミスを減らし、遅延を防ぎ、スムーズな手続きを実現します。事前に書類を準備しておくことで、コンサルタントや当局に書類を提出する際の時間も節約でき、安心して手続きを進めることができます。",
+        "keyPoints": [
+          "必要な書類をすべて集める",
+          "学歴とスキル証明書を確認する",
+          "エラーを減らし、遅延を回避します",
+          "時間を節約し、自信を築く"
+        ],
+        "image": "/documentation.jpg",
+        "imgLeft": false
+      },
+      {
+        "id": 2,
+        "title": "申請とビザの処理",
+        "description": "ビザ申請手続きにおいては、正確さと細部への配慮が極めて重要です。各申請書は、スペル、日付、署名の誤りがないよう、慎重に記入してください。資格を持つコンサルタントとの連携により、財務書類、宣誓供述書、スポンサーシップ書類がすべての要件を満たしていることが保証されます。適切な確認と提出により、ビザ承認の可能性が大幅に高まり、不要な遅延や却下を防ぐことができます。",
+        "keyPoints": [
+          "正確さと細部へのこだわり",
+          "スペル、日付、署名の間違いを避ける",
+          "財務書類、宣誓供述書、スポンサーシップ書類",
+          "ビザ承認の可能性を高める"
+        ],
+        "image": "/Application.jpg",
+        "imgLeft": true
+      },
+      {
+        "id": 3,
+        "title": "最終準備と出発",
+        "description": "最後のステップは、学生が出発に向けて万全の準備を整えることです。出発前オリエンテーションでは、日本、韓国、イギリスの生活様式、文化、職場でのエチケット、日常生活について学びます。航空券購入、渡航準備、そして直前のガイダンスなど、学生の皆さんが安心して出発できるようサポートいたします。このステップは不安を軽減し、準備を整え、スムーズな海外生活への移行をサポートします。",
+        "keyPoints": [
+          "出発の準備は万端",
+          "日本、韓国、イギリスのライフスタイルと文化",
+          "自信、安全、準備万端",
+          "不安を軽減し、準備性を向上させる"
+        ],
+        "image": "/final.jpg",
+        "imgLeft": false
+      }
+    ]
   }
 }
