--- a/src/Locales/ja.json
+++ b/src/Locales/ja.json
@@ -35,6 +35,284 @@
       "book": "今すぐ予約する"
     }
   },
+  "home": {
+    "hero": {
+      "heading": "GSR教育アカデミー",
+      "subheading": "私たちは、世界中の学習者に一貫性と信頼性のある教育機会を提供し、専門家の指導と個別のサポートにより学生が学業と職業上の目標を達成できるように支援します。",
+      "button": {
+        "learn": "もっと詳しく知る",
+        "call": "今すぐ電話してください"
+      },
+      "stats": {
+        "std": "学生",
+        "ins": "インストラクター",
+        "course": "コース"
+      }
+    },
+    "intro": {
+      "t1": "選ぶ",
+      "t2": "信頼できる海外パートナー",
+      "p1": "GSRでは、留学という夢を自信を持って実現できるよう、学生の皆様をサポートいたします。最適な大学選びからビザ取得のサポート、出発前の準備まで、GSRのチームがあらゆる段階でスムーズな留学の実現をお手伝いいたします。",
+      "slo": "あなたの未来は最高のものであるべきです。そして、それが私たちが実現することです。",
+      "button": "旅を始めましょう"
+    },
+    "services": {
+      "title": "当社のサービスを発見する",
+      "subtitle": "専門サービスでチャンスを掴みましょう。留学の準備、新しい言語の学習、海外での就労計画など、どんなことでもサポートいたします。",
+      "button": "もっと詳しく見る",
+      "items": [
+        {
+          "icon": "FaUserTie",
+          "title": "マンツーマン進路相談",
+          "description": "学生の興味や目標に基づいて、最適な学業やキャリアの道を選ぶための個別指導。",
+          "points": [
+            "個人評価",
+            "キャリアプランニング",
+            "目標設定",
+            "95% 合格率"
+          ],
+          "bgColor": "#2E86C1"
+        },
+        {
+          "icon": "FaLanguage",
+          "title": "日本語研修",
+          "description": "N5からN1までの認定プログラム。JLPT、NAT、その他日本の教育機関で必要な試験に焦点を当てています。",
+          "points": [
+            "JLPT対策",
+            "NATトレーニング",
+            "会話練習",
+            "200名以上の入学実績"
+          ],
+          "bgColor": "#E67E22"
+        },
+        {
+          "icon": "FaUniversity",
+          "title": "書類準備サポート",
+          "description": "書類作成、出願書類、エッセイ、日本の学校や大学との連絡を完全サポート。",
+          "points": ["出願準備", "エッセイ作成", "学校との連絡", "85% 成功率"],
+          "bgColor": "#9B59B6"
+        }
+      ]
+    },
+    "why": {
+      "t1": "なぜそうすべきですか",
+      "t2": "私たちを信頼してください",
+      "p1": "私たちは、適切なコースの選択から入学、奨学金、ビザの確保まで、あらゆる段階で学生を指導し、学業の成功へのスムーズな道を保証します。",
+      "button": "無料相談を予約する",
+      "features": [
+        {
+          "number": "01",
+          "title": "パーソナライズされたガイダンス",
+          "description": "私たちのコンサルタントは、あなたの学業目標、キャリアの志向、そして個人の強みに合わせたアドバイスを提供します。",
+          "icon": "🎯",
+          "img": "final/guidance.jpg"
+        },
+        {
+          "number": "02",
+          "title": "専門家から学ぶ",
+          "description": "大学、コース、入学プロセスに関する豊富な経験と知識を活かし、確かなサポートを受けられます。",
+          "icon": "👩‍🏫",
+          "img": "https://images.unsplash.com/photo-1513258496099-48168024aec0?w=900&auto=format&fit=crop&q=60"
+        },
+        {
+          "number": "03",
+          "title": "書類・出願サポート",
+          "description": "成功の可能性を高めるために、書類作成から修正、提出まで一貫したサポートを行います。",
+          "icon": "📝",
+          "img": "final/visa.jpg"
+        },
+        {
+          "number": "04",
+          "title": "スムーズなビザ取得プロセス",
+          "description": "必要な書類の準備から条件の確認まで、ストレスなくビザ申請を進められるようにサポートします。",
+          "icon": "✈️",
+          "img": "final/sVisa.jpg"
+        },
+        {
+          "number": "05",
+          "title": "最終準備と出発",
+          "description": "荷造りのコツや文化的オリエンテーション、旅行手配まで、安心して自信を持って出発できるようサポートします。",
+          "icon": "💰",
+          "img": "final/scholar.jpg"
+        }
+      ]
+    },
+    "abroad": {
+      "title": "留学プログラム",
+      "subtitle": "日本と韓国で世界トップクラスの教育を受け、あなたの可能性を解き放ちましょう。学業とキャリアの目標達成を目指しながら、新たな文化を体験しましょう。",
+      "op": {
+        "japan": {
+          "title": "日本への留学 🇯🇵",
+          "subtitle": "日の出ずる国で、世界水準の教育を体験してください。日本語を習得し、豊かな文化体験を満喫してください。",
+          "button": "日本プログラムについてもっと知る"
+        },
+        "korea": {
+          "title": "韓国留学 🇰🇷",
+          "subtitle": "韓国の革新的な教育を体験しましょう。韓国語をマスターし、活気あふれるKカルチャー現象を探求しましょう。",
+          "button": "韓国プログラムについてもっと知る"
+        },
+        "cta": {
+          "title": "旅を始める準備はできましたか?",
+          "subtitle": "国際教育への次のステップへ。プログラム、奨学金、出願手続きに関する詳細情報を入手しましょう。",
+          "button": {
+            "all": "すべてのプログラムを見る",
+            "consult": "相談を受ける"
+          }
+        }
+      },
+      "japan": [
+        {
+          "id": 1,
+          "name": "日本語能力試験（JLPT）",
+          "levels": "N5からN1まで",
+          "description": "初級（N5）から上級（N1）まで、日本語を体系的に学習し、包括的な言語トレーニングを提供します"
+        },
+        {
+          "id": 2,
+          "name": "日本文化実習",
+          "levels": "全レベル",
+          "description": "伝統から現代まで、日本の文化、習慣、ビジネスマナーを体験的に学びます"
+        }
+      ],
+      "korea": [
+        {
+          "id": 3,
+          "name": "韓国語能力試験（TOPIK）",
+          "levels": "レベル1-6",
+          "description": "基礎から上級まで韓国語を学び、TOPIK認定試験に備えます"
+        },
+        {
+          "id": 4,
+          "name": "韓国文化研究",
+          "levels": "全レベル",
+          "description": "韓国の伝統、Kカルチャー、歴史、現代社会の習慣を探求します"
+        }
+      ]
+    },
+    "testi": {
+      "t1": "信頼されている",
+      "t2": "何百人もの学生。",
+      "para": "専門家による指導、信頼できるサポート、そして海外留学における実績ある成功で、学生を夢の実現へと導きます。",
+      "rate": "ビザ成功率",
+      "list": {
+        "bijaya": {
+          "content": "教材はとても良く、指導方法も役立ち、オンラインで他の人と協力するのは素晴らしい経験でした。"
+        },
+        "dilkumari": {
+          "content": "インタラクティブな学習体験は期待以上でした。複雑な内容も簡単に理解できました。"
+        },
+        "gobinda": {
+          "content": "講師や仲間からの素晴らしいサポートがありました。協力的な環境が学習をさらに向上させてくれました。"
+        }
+      }
+    },
+    "visit": {
+      "title": "ご来店ください",
+      "subtitle": "今すぐご連絡ください。お客様のあらゆるニーズにお応えし、ご質問にお答えいたします。",
+      "get": "連絡する",
+      "subget": "ご意見をお聞かせください。メッセージをお送りいただければ、できるだけ早くご返信いたします。",
+      "find": "ここで私たちを見つけてください",
+      "phone": "電話",
+      "mail": "電子メール",
+      "add": "住所",
+      "hrs": "営業時間"
+    }
+  },
+  "services": {
+    "hero": {
+      "title": "当社のサービス",
+      "subtitle": "お客様の目標達成を支援する最高品質のコンサルティングサービスをご提供します。計画から実行まで、私たちは信頼できるパートナーです。",
+      "button": "お問い合わせ"
+    },
+    "discover": {
+      "title": "当社のサービスを発見する",
+      "items": [
+        {
+          "icon": "FaUserTie",
+          "title": "マンツーマンキャリアカウンセリング",
+          "description": "学生が興味や目標に基づいて適切な学問や職業の道を選べるよう、個別に指導します。",
+          "points": ["個人評価", "キャリア計画", "目標設定", "合格率95%"],
+          "bgColor": "#2E86C1"
+        },
+        {
+          "icon": "FaLanguage",
+          "title": "日本語トレーニング",
+          "description": "N5からN1までの認定トレーニングプログラムで、JLPT、NAT、および日本の機関で必要な試験に対応。",
+          "points": [
+            "JLPT準備",
+            "NATトレーニング",
+            "会話練習",
+            "200以上の入学実績"
+          ],
+          "bgColor": "#E67E22"
+        },
+        {
+          "icon": "FaUniversity",
+          "title": "書類準備サポート",
+          "description": "書類作成、申請フォーム、エッセイ、日本の学校や大学とのやり取りを含む完全サポート。",
+          "points": ["申請書作成", "エッセイ作成", "学校との連絡", "成功率85%"],
+          "bgColor": "#9B59B6"
+        },
+        {
+          "icon": "FaGlobeAsia",
+          "title": "文化オリエンテーション",
+          "description": "学生や労働者が日本の文化、マナー、職場習慣に適応できるようワークショップや指導を提供します。",
+          "points": [
+            "文化トレーニング",
+            "マナー講座",
+            "適応サポート",
+            "承認率99%"
+          ],
+          "bgColor": "#F39C12"
+        },
+        {
+          "icon": "FaPassport",
+          "title": "ビザ・入国手続きサポート",
+          "description": "ビザ申請、書類作成、日本の入国管理要件の遵守をサポートします。",
+          "points": ["ビザ申請", "書類作成", "遵守サポート"],
+          "bgColor": "#C0392B"
+        },
+        {
+          "icon": "FaChartLine",
+          "title": "キャリア成長サポート",
+          "description": "キャリア成長、履歴書作成、面接準備、関連する日本企業への就職を支援します。",
+          "points": ["履歴書作成", "面接スキル", "就職サポート"],
+          "bgColor": "#16A085"
+        }
+      ]
+    },
+    "process": {
+      "title": "ステップバイステップの申請プロセス",
+      "subtitle": "最初のカウンセリングから飛行機への搭乗まで、留学の旅がスムーズに進むよう、あらゆるステップでサポートいたします。",
+      "steps": [
+        {
+          "id": 1,
+          "title": "キャリアカウンセリング",
+          "description": "経験豊富なカウンセラーが、あなたの興味、キャリア目標、学問の希望について相談します。日本での学習に最適な道を選ぶお手伝いをし、コースや大学に関するすべての質問にお答えします。"
+        },
+        {
+          "id": 2,
+          "title": "コースと大学の選択",
+          "description": "あなたのプロフィール、予算、希望に基づいて大学やコースの候補を絞り込むお手伝いをします。目標に合ったプログラムを選び、入学の可能性を高める個別アドバイスを提供します。"
+        },
+        {
+          "id": 3,
+          "title": "申請と書類準備",
+          "description": "学業成績証明書、推薦状、申請書を含む必要書類の準備と提出をサポートします。チームが申請内容の完全性と正確性を確認し、期限内に提出されるよう管理します。"
+        },
+        {
+          "id": 4,
+          "title": "ビザと承認",
+          "description": "入学が確定したら、学生ビザ申請に関するステップごとのサポートを提供します。書類の確認や提出、申請の進捗追跡を行い、ビザ承認まで支援します。"
+        },
+        {
+          "id": 5,
+          "title": "出発前オリエンテーション",
+          "description": "出発前に、日本の文化、学業の期待、住居、銀行、生活に必要なスキルについてのオリエンテーションを実施します。これにより、自信を持って日本での生活を始める準備が整います。"
+        }
+      ]
+    }
+  },
   "about": {
     "heading": "GSRについて",
     "subheading": "私たちは、誠実さと配慮をもって、学生をグローバルな教育機会へと導くことに尽力しています。",
@@ -218,6 +496,117 @@
         ],
         "image": "/final.jpg",
         "imgLeft": false
+      }
+    ]
+  },
+  "add-form": {
+    "hero": {
+      "heading": "入学フォーム",
+      "subheading": "語学コースへのお申し込みは、以下のフォームにご記入ください。英語、日本語、韓国語のプログラムをご用意しております。"
+    },
+    "form": {
+      "fname": "ファーストネーム",
+      "lname": "苗字",
+      "mail": "電子メール",
+      "phone": "電話",
+      "gender": {
+        "sel": "性別を選択してください",
+        "male": "男",
+        "fe": "女性"
+      },
+      "gname": "守護者名",
+      "gcontact": "保護者の連絡先",
+      "add": "完全な住所",
+      "button": "申請書の提出",
+      "lang": {
+        "title": "言語の選択",
+        "options": {
+          "English": [
+            "IELTS準備",
+            "PTE準備",
+            "基礎英語",
+            "ビジネス英語",
+            "会話英語"
+          ],
+          "Japanese": [
+            "基礎日本語 (N5)",
+            "初級日本語 (N4)",
+            "中級日本語 (N3)",
+            "上級日本語 (N2)",
+            "高度日本語 (N1)",
+            "JLPT準備コース",
+            "日本語会話クラス",
+            "ビジネス日本語",
+            "日本文化と言語"
+          ],
+          "Korean": [
+            "基礎韓国語 (TOPIK I Level 1)",
+            "初級韓国語 (TOPIK I Level 2)",
+            "中級韓国語 (TOPIK II Level 3)",
+            "上級韓国語 (TOPIK II Level 4)",
+            "高度韓国語 (TOPIK II Level 5)",
+            "熟練韓国語 (TOPIK II Level 6)",
+            "TOPIK準備コース",
+            "韓国語会話クラス"
+          ]
+        }
+      }
+    }
+  },
+  "faq": {
+    "hero": {
+      "heading": "よくある質問",
+      "subheading": "Japan Student & SSW と当研究所に関するよくある質問への回答をご覧ください。"
+    },
+    "title": "よくある質問",
+    "items": [
+      {
+        "question": "Q1. 学生ビザとSSWの違いは何ですか？",
+        "answer": "学生ビザは日本での学習を可能にしますが、SSWは直接雇用を可能にします。"
+      },
+      {
+        "question": "Q2. 学生ビザとSSWの両方に申し込めますか？",
+        "answer": "どちらか一方を選ぶ必要があります。両方に申し込むことはできません。"
+      },
+      {
+        "question": "Q3. どのくらいの日本語能力が必要ですか？",
+        "answer": "学生ビザにはJLPT/NAT N5が必要です。SSWにはJLPT/NAT N4と技能試験が必要です。"
+      },
+      {
+        "question": "Q4. JLPTとNAT、どちらの試験が有効ですか？",
+        "answer": "JLPTとNATの両方が有効です。"
+      },
+      {
+        "question": "Q5. 学生としてアルバイトはできますか？",
+        "answer": "学生は許可を得れば週28時間まで働くことができます。"
+      },
+      {
+        "question": "Q6. SSWには職務経験が必要ですか？",
+        "answer": "職務経験は必須ではありませんが、技能試験の合格は必須です。"
+      },
+      {
+        "question": "Q7. 学生ビザをSSWに変更できますか？",
+        "answer": "学生ビザは、言語と技能試験に合格した後にSSWに変更できます。"
+      },
+      {
+        "question": "Q8. 学生ビザとSSW、どちらが良いですか？",
+        "answer": "学生ビザは高等教育や長期キャリア向け、SSWは即就労と収入向けです。"
+      },
+      {
+        "question": "Q9. 教師は誰ですか？",
+        "answer": "授業は経験豊富なネパール人と日本人の講師によって行われます。"
+      },
+      {
+        "question": "Q10. ビザ申請のサポートはありますか？",
+        "answer": "ビザ申請のガイダンスとサポートをすべての段階で提供します。"
+      },
+      {
+        "question": "Q11. 授業の時間は？",
+        "answer": "授業は朝、昼、夕方のシフトで利用可能です。"
+      },
+      {
+        "question": "Q12. 日本到着後のサポートはありますか？",
+        "answer": "はい、日本到着後、学校や企業とのつながりのサポートを提供します。"
       }
     ]
   }
