--- a/src/Locales/en.json
+++ b/src/Locales/en.json
@@ -35,6 +35,299 @@
       "book": "Book Now"
     }
   },
+  "home": {
+    "hero": {
+      "heading": "GSR Educational Academy",
+      "subheading": "We provide consistent and reliable educational opportunities for learners worldwide, empowering students to achieve their academic and professional goals with expert guidance and personalized support.",
+      "button": {
+        "learn": "Learn More",
+        "call": "Call Now"
+      },
+      "stats": {
+        "std": "Students",
+        "ins": "instructors",
+        "course": "Courses"
+      }
+    },
+    "intro": {
+      "t1": "Choose",
+      "t2": "Your Trusted Abroad Partner",
+      "p1": "At GSR, we guide students toward achieving their dreams of studying abroad with confidence. From selecting the right university to visa assistance and pre-departure preparation, our team ensures a smooth journey every step of the way.",
+      "slo": "Your future deserves the best — and that’s what we deliver.",
+      "button": "Start Your Journey"
+    },
+    "services": {
+      "title": "Discover Our Services",
+      "subtitle": "Unlock opportunities with our expert services. Whether you’re preparing for studies, learning a new language, or planning to work abroad, we’ve got you covered.",
+      "button": "Explore More",
+      "items": [
+        {
+          "icon": "FaUserTie",
+          "title": "One-on-One Career Counseling",
+          "description": "Personalized guidance to help students choose the right academic or professional path based on their interests and goals.",
+          "points": [
+            "Personal Assessment",
+            "Career Planning",
+            "Goal Setting",
+            "95% Pass Rate"
+          ],
+          "bgColor": "#2E86C1"
+        },
+        {
+          "icon": "FaLanguage",
+          "title": "Japanese Language Training",
+          "description": "Certified training programs from N5 to N1 level, focused on clearing JLPT, NAT, and language exams required for Japanese institutions.",
+          "points": [
+            "JLPT Preparation",
+            "NAT Training",
+            "Speaking Practice",
+            "200+ Admissions"
+          ],
+          "bgColor": "#E67E22"
+        },
+        {
+          "icon": "FaUniversity",
+          "title": "Documentation Preparation",
+          "description": "Complete support with documentation, application forms, essays, and communication with Japanese schools and universities.",
+          "points": [
+            "Application Prep",
+            "Essay Writing",
+            "School Communication",
+            "85% Success Rate"
+          ],
+          "bgColor": "#9B59B6"
+        }
+      ]
+    },
+    "why": {
+      "t1": "Why should you",
+      "t2": "Trust us",
+      "p1": "We guide students every step of the way—from choosing the right course to securing admissions, scholarships, and visa ensuring a smooth path to academic success.",
+      "button": "Book a Free Consultation",
+      "features": [
+        {
+          "number": "01",
+          "title": "Personalized Guidance",
+          "description": "Our consultants provide tailored advice to match your academic goals, career aspirations, and personal strengths.",
+          "icon": "🎯",
+          "img": "final/guidance.jpg"
+        },
+        {
+          "number": "02",
+          "title": "Learn From Experts",
+          "description": "Benefit from years of experience and insider knowledge about universities, courses, and admission processes worldwide.",
+          "icon": "👩‍🏫",
+          "img": "https://images.unsplash.com/photo-1513258496099-48168024aec0?w=900&auto=format&fit=crop&q=60"
+        },
+        {
+          "number": "03",
+          "title": "Documentation & Application Support",
+          "description": "Get end-to-end assistance in preparing, refining, and submitting your documents and applications for the best chances of success.",
+          "icon": "📝",
+          "img": "final/visa.jpg"
+        },
+        {
+          "number": "04",
+          "title": "Smooth Visa Process",
+          "description": "Our visa guidance ensures you have the correct documentation and meet all requirements without unnecessary stress.",
+          "icon": "✈️",
+          "img": "final/sVisa.jpg"
+        },
+        {
+          "number": "05",
+          "title": "Final Preparation & Departure",
+          "description": "We guide you through your final preparations, from packing tips and cultural orientation to travel arrangements, ensuring a smooth and confident departure.",
+          "icon": "💰",
+          "img": "final/scholar.jpg"
+        }
+      ]
+    },
+    "abroad": {
+      "title": "Study Abroad Programs",
+      "subtitle": "Unlock your potential with world-class education in Japan and Korea. Experience new cultures while advancing your academic and professional goals.",
+      "op": {
+        "japan": {
+          "title": "Study in Japan 🇯🇵",
+          "subtitle": "Experience world-class education in the Land of the Rising Sun. Master Japanese language and immerse yourself in rich cultural experiences.",
+          "button": "Learn More About Japan Programs"
+        },
+        "korea": {
+          "title": "Study in Korea 🇰🇷",
+          "subtitle": "Discover innovative education in South Korea. Master Korean language and explore the vibrant K-culture phenomenon.",
+          "button": "Learn More About Korea Programs"
+        },
+        "cta": {
+          "title": "Ready to Start Your Journey?",
+          "subtitle": "Take the next step towards your international education. Get detailed information about programs, scholarships, and application processes.",
+          "button": {
+            "all": "View All Programs",
+            "consult": "Get Consultation"
+          }
+        }
+      },
+      "japan": [
+        {
+          "id": 1,
+          "name": "Japanese Language Proficiency (JLPT)",
+          "levels": "N5 to N1",
+          "description": "Master Japanese from beginner (N5) to advanced (N1) levels with comprehensive language training"
+        },
+        {
+          "id": 2,
+          "name": "Japanese Cultural Practices",
+          "levels": "All Levels",
+          "description": "Immerse yourself in traditional and modern Japanese culture, customs, and business etiquette"
+        }
+      ],
+      "korea": [
+        {
+          "id": 3,
+          "name": "Korean Language Proficiency (TOPIK)",
+          "levels": "Level 1-6",
+          "description": "Learn Korean from basics to advanced proficiency with TOPIK certification preparation"
+        },
+        {
+          "id": 4,
+          "name": "Korean Cultural Studies",
+          "levels": "All Levels",
+          "description": "Explore Korean traditions, K-culture, history, and contemporary social practices"
+        }
+      ]
+    },
+    "testi": {
+      "t1": "Trusted by",
+      "t2": "Hundreds of Students.",
+      "para": "Guiding students towards their dreams with expert mentorship, reliable support, and a proven track record of success in education abroad.",
+      "rate": "Visa Success Rate",
+      "list": {
+        "bijaya": {
+          "content": "Course materials were good, the mentoring approach was helpful, and collaborating online was a great experience."
+        },
+        "dilkumari": {
+          "content": "The interactive learning experience exceeded my expectations. Complex topics became easy to understand."
+        },
+        "gobinda": {
+          "content": "Amazing support from instructors and peers. The collaborative environment boosted my learning journey."
+        }
+      }
+    },
+    "visit": {
+      "title": "Visit Us",
+      "subtitle": "Get in touch with us today. We're here to help you with all your needs and answer any questions you may have.",
+      "get": "Get In Touch",
+      "subget": "We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+      "find": "Find Us Here",
+      "phone": "Phone",
+      "mail": "Email",
+      "add": "Address",
+      "hrs": "Business Hours"
+    }
+  },
+  "services": {
+    "hero": {
+      "title": "Our Services",
+      "subtitle": "We provide top-quality consulting services to help you achieve your goals. From planning to execution, we’re your trusted partner.",
+      "button": "Contact Us"
+    },
+    "discover": {
+      "title": "Discover Our Serivces",
+      "items": [
+        {
+          "icon": "FaUserTie",
+          "title": "One-on-One Career Counseling",
+          "description": "Personalized guidance to help students choose the right academic or professional path based on their interests and goals.",
+          "points": [
+            "Personal Assessment",
+            "Career Planning",
+            "Goal Setting",
+            "95% Pass Rate"
+          ],
+          "bgColor": "#2E86C1"
+        },
+        {
+          "icon": "FaLanguage",
+          "title": "Japanese Language Training",
+          "description": "Certified training programs from N5 to N1 level, focused on clearing JLPT, NAT, and language exams required for Japanese institutions.",
+          "points": [
+            "JLPT Preparation",
+            "NAT Training",
+            "Speaking Practice",
+            "200+ Admissions"
+          ],
+          "bgColor": "#E67E22"
+        },
+        {
+          "icon": "FaUniversity",
+          "title": "Documentation Preparation",
+          "description": "Complete support with documentation, application forms, essays, and communication with Japanese schools and universities.",
+          "points": [
+            "Application Prep",
+            "Essay Writing",
+            "School Communication",
+            "85% Success Rate"
+          ],
+          "bgColor": "#9B59B6"
+        },
+        {
+          "icon": "FaGlobeAsia",
+          "title": "Cultural Orientation",
+          "description": "Workshops and guidance to help students and workers adapt to Japanese culture, etiquette, and workplace norms.",
+          "points": [
+            "Cultural Training",
+            "Etiquette Classes",
+            "Adaptation Support",
+            "99% Approval Rate"
+          ],
+          "bgColor": "#F39C12"
+        },
+        {
+          "icon": "FaPassport",
+          "title": "Visa & Immigration Assistance",
+          "description": "Support with visa applications, documentation, and compliance with Japanese immigration requirements.",
+          "points": ["Visa Processing", "Documentation", "Compliance Support"],
+          "bgColor": "#C0392B"
+        },
+        {
+          "icon": "FaChartLine",
+          "title": "Career Growth+",
+          "description": "Guidance on career growth, resume building, interview preparation, and placement in relevant Japanese companies.",
+          "points": ["Resume Building", "Interview Skills", "Job Placement"],
+          "bgColor": "#16A085"
+        }
+      ]
+    },
+    "process": {
+      "title": "Step-by-Step Application Process",
+      "subtitle": "From initial counseling to boarding the plane, we guide you at every step to make your study abroad journey smooth.",
+      "setps": [
+        {
+          "id": 1,
+          "title": "Career Counseling",
+          "description": "Our experienced counselors discuss your interests, career goals, and academic aspirations. We help you choose the best path for studying in Japan and answer all your queries about courses and universities."
+        },
+        {
+          "id": 2,
+          "title": "Course & University Selection",
+          "description": "We assist you in shortlisting universities and courses based on your profile, budget, and preferences. You get personalized advice to choose the program that fits your goals and increases your chances of admission."
+        },
+        {
+          "id": 3,
+          "title": "Application & Documentation",
+          "description": "We guide you in preparing and submitting all necessary documents, including academic transcripts, recommendation letters, and application forms. Our team ensures that your application is complete, accurate, and submitted on time."
+        },
+        {
+          "id": 4,
+          "title": "Visa & Approval",
+          "description": "Once admission is confirmed, we provide step-by-step assistance with the student visa application, including document verification and submission. We help you track your application until you receive the visa approval."
+        },
+        {
+          "id": 5,
+          "title": "Pre-Departure Orientation",
+          "description": "Before your departure, we conduct orientation sessions covering Japanese culture, academic expectations, housing, banking, and essential life skills. This ensures you are well-prepared and confident to start your journey in Japan."
+        }
+      ]
+    }
+  },
   "about": {
     "heading": "About GSR",
     "subheading": "We are committed to guiding students towards global educational opportunities with integrity and care.",
@@ -218,6 +511,117 @@
         ],
         "image": "/final.jpg",
         "imgLeft": false
+      }
+    ]
+  },
+  "add-form": {
+    "hero": {
+      "heading": "Admission Form",
+      "subheading": "Fill out the form below to enroll in our language courses. We offer English, Japanese, and Korean language programs."
+    },
+    "form": {
+      "fname": "First Name",
+      "lname": "Last Name",
+      "mail": "Email",
+      "phone": "Phone",
+      "gender": {
+        "sel": "Select Gender",
+        "male": "Male",
+        "fe": "Female"
+      },
+      "gname": "Guardian Name",
+      "gcontact": "Guardian Contact",
+      "add": "Full Address",
+      "button": "Submit Application",
+      "lang": {
+        "title": "Select Language",
+        "options": {
+          "English": [
+            "IELTS Preparation",
+            "PTE Preparation",
+            "Basic English",
+            "Business English",
+            "Conversational English"
+          ],
+          "Japanese": [
+            "Basic Japanese (N5)",
+            "Elementary Japanese (N4)",
+            "Intermediate Japanese (N3)",
+            "Upper Intermediate Japanese (N2)",
+            "Advanced Japanese (N1)",
+            "JLPT Preparation Course",
+            "Japanese Conversation Classes",
+            "Business Japanese",
+            "Japanese Culture & Language"
+          ],
+          "Korean": [
+            "Basic Korean (TOPIK I Level 1)",
+            "Elementary Korean (TOPIK I Level 2)",
+            "Intermediate Korean (TOPIK II Level 3)",
+            "Upper Intermediate Korean (TOPIK II Level 4)",
+            "Advanced Korean (TOPIK II Level 5)",
+            "Proficient Korean (TOPIK II Level 6)",
+            "TOPIK Preparation Course",
+            "Korean Conversation Classes"
+          ]
+        }
+      }
+    }
+  },
+  "faq": {
+    "hero": {
+      "heading": "Selected FAQ's",
+      "subheading": "Find answers to the most common questions about Japan Student & SSW and our Institute."
+    },
+    "title": "Frequently Asked Questions",
+    "items": [
+      {
+        "question": "Q1. What is the difference between a Student Visa and SSW?",
+        "answer": "A Student Visa allows study in Japan, while SSW allows direct employment."
+      },
+      {
+        "question": "Q2. Can I apply for both Student Visa and SSW?",
+        "answer": "You must choose one; applying for both is not allowed."
+      },
+      {
+        "question": "Q3. How much Japanese proficiency is required?",
+        "answer": "Student Visa requires JLPT/NAT N5. SSW requires JLPT/NAT N4 and a skill test."
+      },
+      {
+        "question": "Q4. Which exam is valid, JLPT or NAT?",
+        "answer": "Both JLPT and NAT exams are valid."
+      },
+      {
+        "question": "Q5. Can I work part-time as a student?",
+        "answer": "Students can work up to 28 hours per week with permission."
+      },
+      {
+        "question": "Q6. Do I need work experience for SSW?",
+        "answer": "Work experience is not always required, but passing the skill test is mandatory."
+      },
+      {
+        "question": "Q7. Can a Student Visa be changed to SSW?",
+        "answer": "A Student Visa can be changed to SSW after passing the language and skill test."
+      },
+      {
+        "question": "Q8. Which is better, Student Visa or SSW?",
+        "answer": "Student Visa is better for higher education and long-term careers, while SSW is better for immediate work and income."
+      },
+      {
+        "question": "Q9. Who are the teachers?",
+        "answer": "Classes are taught by experienced Nepali and Japanese instructors."
+      },
+      {
+        "question": "Q10. Do you provide visa processing services?",
+        "answer": "Full visa processing guidance and support are provided at every step."
+      },
+      {
+        "question": "Q11. What are the class timings?",
+        "answer": "Classes are available in morning, day, and evening shifts."
+      },
+      {
+        "question": "Q12. Do you provide support after reaching Japan?",
+        "answer": "Yes, we provide support in connecting with schools or companies after arriving in Japan."
       }
     ]
   }
